--- a/themes/bansuri/sass/custom/_page.scss
+++ b/themes/bansuri/sass/custom/_page.scss
@@ -27,7 +27,7 @@
 	}
 	.bansuri-cds {
 		border-radius: 0px 20px 0px 20px;
-		box-shadow: 0px 0px 10px #ccc;
+		box-shadow: 3px 3px 10px #ccc;
 		background:url("../images/bg-edges.png");
 		-webkit-transition: all 0.5s;
 		-moz-transition: all 0.5s;
@@ -35,7 +35,7 @@
 		-o-transition: all 0.5s;
 		transition: all 0.5s;
 		&:hover {
-		    box-shadow: 0px 0px 10px #6c6c6c;
+		    box-shadow: -3px -3px 10px #6c6c6c;
 			-webkit-transition: all 0.5s;
 			-moz-transition: all 0.5s;
 			-ms-transition: all 0.5s;
@@ -60,7 +60,7 @@
 	}
 	.glossery-term {
 		margin-top: 20px;
-		box-shadow: 0px 0px 10px #ccc;
+		box-shadow: 3px 3px 10px #ccc;
 		border-radius: 0px 20px 0px 20px;
 		background:url("../images/bg-edges.png");
 		-webkit-transition: all 0.5s;
@@ -69,7 +69,7 @@
 		-o-transition: all 0.5s;
 		transition: all 0.5s;
 		&:hover {
-		    box-shadow: 0px 0px 10px #6c6c6c;
+		    box-shadow: -3px -3px 10px #6c6c6c;
 			-webkit-transition: all 0.5s;
 			-moz-transition: all 0.5s;
 			-ms-transition: all 0.5s;
@@ -95,14 +95,14 @@
 		margin-top: 20px;
 		border-radius: 0px 20px 0px 20px;
 		padding-bottom: 20px;
-		box-shadow: 0px 0px 10px #ccc;
+		box-shadow: 3px 3px 10px #ccc;
 		-webkit-transition: all 0.5s;
 		-moz-transition: all 0.5s;
 		-ms-transition: all 0.5s;
 		-o-transition: all 0.5s;
 		transition: all 0.5s;		
 		&:hover {
-		    box-shadow: 0px 0px 10px #6c6c6c;
+		    box-shadow: -3px -3px 10px #6c6c6c;
 			-webkit-transition: all 0.5s;
 			-moz-transition: all 0.5s;
 			-ms-transition: all 0.5s;
